# hpguppi_daq

./: README.md
init/: readraw_init.sh
src/: .gitignore  Makefile.am  configure.ac  hpguppi_coherent_bf_thread.c  hpguppi_coherent_bf_thread_fb.c  hpguppi_coherent_bf_thread_raw.c  hpguppi_databuf.c  hpguppi_databuf.h  hpguppi_fildisk_meerkat_thread.c  hpguppi_fildisk_only_thread.c  hpguppi_gbtstatus_loop.rb  hpguppi_ibverbs_pkt_thread.c  hpguppi_ibverbs_pkt_thread.h  hpguppi_init.sh  hpguppi_mb128ch_net_thread.c  hpguppi_mb1_net_thread.c  hpguppi_meerkat_net_thread.c  hpguppi_meerkat_pkt_thread.c  hpguppi_meerkat_spead_thread.c  hpguppi_mkfeng.h  hpguppi_net_thread.c  hpguppi_params.c  hpguppi_params.h  hpguppi_pksuwl.h  hpguppi_pksuwl_init.sh  hpguppi_pksuwl_net_thread.c  hpguppi_pksuwl_vdif_thread.c  hpguppi_pkt_thread.c  hpguppi_rawdisk_only_thread.c  hpguppi_rawdisk_thread.c  hpguppi_rawfile_input_thread.c  hpguppi_rawspec.c  hpguppi_rawspec.h  hpguppi_read_raw_files.c  hpguppi_simdata_input_thread.c  hpguppi_time.c  hpguppi_time.h  hpguppi_udp.c  hpguppi_udp.h  hpguppi_util.c  (+13 more)
src/m4/: .gitignore  coherent_beamformer.m4
